[package]
name = "session-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-core = "0.4.3"
serde = "1.0.197"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-sessions = {version = "0.12.0", features = ["axum-core", "memory-store", "signed"] }